fix: adjust display properties for main navigation on tablet and desktop

--- a/sass/components/_main-nav.scss
+++ b/sass/components/_main-nav.scss
@@ -5,6 +5,10 @@
   display: none; // Hidden on mobile by default
 
   @include for-tablet-up {
+    display: none;
+  }
+
+  @include for-desktop-up {
     display: block;
   }
 
